# HybML

./: README.md  pyproject.toml
FaultTolerance/: README.md
FaultTolerance/Foundations/: GAN_Modeler.py  README.md
FormalVerification/: LICENSE
FormalVerification-main/: README.md
FormalVerification-main/gdpr/: GDPR_Rules.tla  GDPR_Time.cfg  GDPR_Time.tla  MC_GDPR_Time.cfg  TimeUtils.tla  dpv-owl-turtle  dpv-owl.rdf
FormalVerification-main/smart_contract/contracts/: AnomalyAlert.sol
FormalVerification-main/tla_modules/: BBB4P.tla  Blockchain.cfg  EnergyMeter.cfg
FormalVerification-main/workflow/: workflow.mmd
FormalVerification/gdpr/: MC_GDPR_Time.tla  README.md
FormalVerification/iot/: IoT.drawio
FormalVerification/p2p/: p2p.drawio
FormalVerification/smart_contract/: hardhat.config.js  package.json
FormalVerification/smart_contract/contracts/: Blockchain.sol
FormalVerification/smart_contract/scripts/: deploy.js
FormalVerification/smart_contract/test/: AnomalyAlert.test.js  Blockchain.test.js
FormalVerification/tla_modules/: AnomalyAlertModel.tla  Blockchain.tla  EnergyMeter.tla  P2PNetwork.cfg  P2PNetwork.tla  QuantumTeleportation.cfg  QuantumTeleportation.tla
FormalVerification/workflow/: workflow.drawio
TextmailEncryption/: README.md
src/: README.md
